--- a/chimie/devoir2/Gr1153-devoir2.tex
+++ b/chimie/devoir2/Gr1153-devoir2.tex
@@ -29,8 +29,7 @@ Exercice 1.78 et 1.90, page 52 / 1.124 page 54.
 \begin{enumerate}
 
 \item \chemform{Ca^{2+}},\chemform{Ba^2+}: \chemform{Ba^2+} car $n = 5$ contre $n = 3$ pour \chemform{Ca^2+} 
-\item \chemform{As^{3-}},\chemform{Se^2-}: \chemform{As^{3-}} et \chemform{Se^{2-}} ont le même rayon ionique 
-car leur configuration électronique est identique $1s^2 2s^2 2p^6 3s^2 3p^6 3d^{10}4s^2 4p^6 $ 
+\item \chemform{As^{3-}},\chemform{Se^2-}: \chemform{As^{3-} car le noyeau de \chemform{Se^2-} est plus attractif.
 \item \chemform{Sn^{2+}},\chemform{Sn^4+}: \chemform{Sn^2+} car $n = 5$ contre $n = 4$ pour \chemform{Sn^4+} 
 
 
