--- a/projet/modelisation_filtre/modelisation_filtre.tex
+++ b/projet/modelisation_filtre/modelisation_filtre.tex
@@ -300,5 +300,5 @@ On peut ensuite comparer les graphes de $V_{out}$, $V_{in}$ (Figure \ref{hgp_vol
 	\caption{Graphe de $V_{out} / V_{in}$ pour les valeurs suivantes : $R = \unit{100}{\ohm}$ et $C = {\unit{0.0001}{\farad}}$.}
 	\label{hgp_ratio}
 \end{figure}
-
+Je peux modifier maintenant
 \end{document}
