--- a/projet/negative_feedback/negative_feedback.tex
+++ b/projet/negative_feedback/negative_feedback.tex
@@ -1,7 +1,7 @@
 \input{../head.tex}
 
 \section{Recherche documentaire : la contre-réaction}
-En analysant le circuit de notre haut-parleur, nous avons découvert la présence de boucle reliant la sortie et la borne négative des amplificateurs. Nous nous somme alors interrogés sur le rôle de ces boucles.
+En analysant le circuit de notre haut-parleur, nous avons découvert la présence d'une boucle reliant la sortie et la borne négative de chaque amplificateur. Nous nous sommes alors interrogés sur le rôle de ces boucles.
 
 Nous allons dans un premier temps expliquer les raisons d'être des boucles de contre-réaction en général et nous finirons par l'explication complète de leur raison d'être dans le cas particulier de notre circuit.
 
@@ -12,7 +12,7 @@ Nous allons dans un premier temps expliquer les raisons d'être des boucles de c
 %Les différents ouvrages et documents que nous avons utilisés sont listés dans la bibliographie.
 
 \subsection{Principe de la réaction}
-Le principe de la réaction est présent dans un grand nombre de circuits électroniques. Il consiste en une réinjection d'une partie du signal de sortie à l'entrée du circuit pour le combiner avec le signal d'entrée extérieur.
+Le principe de la réaction est présent dans un grand nombre de circuits électriques. Il consiste en une réinjection d'une partie du signal de sortie à l'entrée du circuit pour le combiner avec le signal d'entrée extérieur.
 
 Il existe deux types de réactions :
 
@@ -46,7 +46,7 @@ Il existe deux types de réactions :
 \subsection{Effets des boucles de contre-réaction}
 
 \subsubsection{En général}
-Les effets des boucles de contre-réaction sur un amplificateurs sont nombreux :
+Les effets des boucles de contre-réaction sur un amplificateur sont nombreux :
 
 \begin{itemize}
 	\item La boucle de contre-réaction rend indépendant le gain de l'amplificateur des différentes variations du circuits ;
